# SIEI

./: App.py  CONTRIBUTING.md  Dataview.py  Login.py  Main.py  Menu.py  README.md  UsersSys.py  pyproject.toml
Resources/: Connection.py  Previewpc.py  Previewpk.py  Previewpm.py  SIEIDB.db
Services/Docs/: previewpmo.py  previewpp.py
Utilities/DB/: SIEIDB.db
Views/: dataview.py  login.py  main.py  menu.py  userssys.py
