[project]
name = "siei"
version = "4.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "customtkinter>=5.2.2",
    "docx2pdf>=0.1.8",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pymupdf>=1.26.0",
    "python-docx>=1.1.2",
    "tkcalendar>=1.6.1",
    "xlsxwriter>=3.2.3",
]
